--- a/src/locales/en/git.json
+++ b/src/locales/en/git.json
@@ -1,1 +1,163 @@
-{}
+{
+  "settings": {
+    "userConfigTab": "User Config",
+    "syncReposTab": "Sync Repositories"
+  },
+  "config": {
+    "title": "Git User Configuration",
+    "description": "Set your user name and email for Git commits made within the VFS. This is required for committing changes.",
+    "userNameLabel": "Git User Name",
+    "userNamePlaceholder": "Your Name",
+    "userEmailLabel": "Git User Email",
+    "userEmailPlaceholder": "your.email@example.com",
+    "patLabel": "Global Personal Access Token",
+    "patPlaceholder": "ghp_xxxxxxxxxxxxxxxxxxxx",
+    "patDescription": "Used for Git operations when no repo-specific auth is configured",
+    "saveButton": "Save Git Config",
+    "savingButton": "Saving...",
+    "validatingButton": "Validating...",
+    "successToast": "Git user configuration updated!",
+    "errorToast": "Failed to update Git configuration.",
+    "errors": {
+      "userNameEmpty": "User name cannot be empty.",
+      "emailInvalid": "Invalid email address.",
+      "invalidInput": "Invalid input"
+    }
+  },
+  "sync": {
+    "title": "Sync Repositories",
+    "description": "Configure remote Git repositories to synchronize conversations. Link conversations to a repo using the sync control in the chat input area. Use the 'Sync/Clone' button to initialize the local copy or pull updates.",
+    "autoSyncOnCompleteLabel": "Auto-sync after stream completion",
+    "autoSyncOnCompleteDescription": "Automatically sync conversations with linked repositories when a message stream completes",
+    "autoInitOnStartupLabel": "Auto-initialize repositories on startup",
+    "autoInitOnStartupDescription": "Automatically clone/initialize configured repositories when the app starts (off by default)",
+    "addNewRepoButton": "Add Sync Repository",
+    "configuredReposTitle": "Configured Repositories",
+    "tableHeaderName": "Name",
+    "tableHeaderRemoteUrl": "Remote URL",
+    "tableHeaderBranch": "Branch",
+    "tableHeaderAuth": "Auth",
+    "tableHeaderActions": "Actions",
+    "authConfigured": "Configured",
+    "authNone": "None",
+    "status": {
+      "syncing": "Initializing/Syncing...",
+      "ready": "Sync Successful / Ready",
+      "failed": "Sync Failed",
+      "default": "Initialize/Sync Repository"
+    },
+    "actions": {
+      "edit": "Edit",
+      "delete": "Delete",
+      "syncAriaLabel": "Initialize or Sync repo {{name}}",
+      "editAriaLabel": "Edit repo {{name}}",
+      "deleteAriaLabel": "Delete repo {{name}}"
+    },
+    "form": {
+      "editTitle": "Edit Sync Repository",
+      "addTitle": "Add New Sync Repository",
+      "nameLabel": "Name",
+      "namePlaceholder": "e.g., My Backup",
+      "remoteUrlLabel": "Remote URL (HTTPS)",
+      "remoteUrlPlaceholder": "https://github.com/user/repo.git",
+      "branchLabel": "Branch",
+      "branchPlaceholder": "main",
+      "authTitle": "Authentication (Optional - Basic Auth/Token)",
+      "securityWarningTitle": "Security Warning",
+      "securityWarningDescription": "Storing credentials directly is insecure. Use a Personal Access Token (PAT) as the password if possible. Credentials are required only for private repositories.",
+      "usernameLabel": "Username",
+      "usernamePlaceholder": "Git Username (Optional)",
+      "passwordLabel": "Password / Token",
+      "passwordPlaceholder": "Password or PAT (Optional)",
+      "cancelButton": "Cancel",
+      "saveButton": "Save Repository",
+      "savingButton": "Saving..."
+    },
+    "deleteConfirmation": "Are you sure you want to delete the sync repository \"{{name}}\"? This will unlink it from any conversations and remove the local copy.",
+    "errors": {
+      "nameRequired": "Repository Name is required.",
+      "urlRequired": "Remote URL is required.",
+      "urlInvalid": "Invalid URL format (e.g., https://github.com/user/repo.git)",
+      "branchRequired": "Branch name is required (e.g., main).",
+      "saveFailed": "Repository Name and Remote URL are required."
+    },
+    "noRepos": "No sync repositories configured yet."
+  },
+  "bulkSync": {
+    "title": "Bulk Git Sync",
+    "description": "Manage synchronization across all repositories and conversations",
+    "repositories": "Repositories",
+    "totalConversations": "Total Conversations",
+    "pendingSync": "Pending Sync",
+    "currentOperation": "Current Operation",
+    "statusErrors": "Errors",
+    "statusRunning": "Running",
+    "repoProgress": "Repository Progress",
+    "convProgress": "Conversation Progress",
+    "errorCount": "{{count}} Error",
+    "errorCount_plural": "{{count}} Errors",
+    "andMoreErrors": "...and {{count}} more errors",
+    "cloneButton": "Clone Repos",
+    "cloneTooltip": "Initialize/clone all configured repositories",
+    "syncPendingButton": "Sync Pending",
+    "syncPendingTooltip": "Sync only conversations that need syncing",
+    "syncAllButton": "Sync All",
+    "syncAllTooltip": "Sync all repositories and conversations",
+    "stopButton": "Stop"
+  },
+  "manualSync": {
+    "ariaLabel": "Manual Git Sync",
+    "tooltipNoRepos": "No sync repositories configured",
+    "tooltip": "Manual Git Sync",
+    "popoverTitle": "Git Sync Repositories",
+    "syncAllButton": "Sync All",
+    "noReposMessage": "No sync repositories configured. Go to Settings → Git → Sync Repositories to add one.",
+    "statusReady": "Ready",
+    "statusSyncing": "Syncing",
+    "statusError": "Error",
+    "statusUnknown": "Unknown"
+  },
+  "syncIndicator": {
+    "labelNoRepos": "No Repos",
+    "tooltipNoRepos": "No Git repositories configured",
+    "labelInitializing": "Initializing",
+    "tooltipInitializing_one": "{{count}} repository needs initialization",
+    "tooltipInitializing_other": "{{count}} repositories need initialization",
+    "labelSyncErrors": "Sync Errors",
+    "tooltipSyncErrors_one": "{{count}} conversation has sync errors",
+    "tooltipSyncErrors_other": "{{count}} conversations have sync errors",
+    "labelSyncing": "Syncing",
+    "tooltipSyncing_one": "Syncing {{count}} conversation",
+    "tooltipSyncing_other": "Syncing {{count}} conversations",
+    "labelPending": "{{count}} Pending",
+    "tooltipPending_one": "{{count}} conversation needs syncing",
+    "tooltipPending_other": "{{count}} conversations need syncing",
+    "labelAllSynced": "All Synced",
+    "tooltipAllSynced_one": "All {{count}} conversation is synced",
+    "tooltipAllSynced_other": "All {{count}} conversations are synced",
+    "reposConfigured_one": "{{count}} repository configured",
+    "reposConfigured_other": "{{count}} repositories configured",
+    "convosWithSync_one": "{{count}} conversation with sync",
+    "convosWithSync_other": "{{count}} conversations with sync"
+  },
+  "syncTrigger": {
+    "ariaLabel": "Configure Git Sync",
+    "tooltipStatus": "Sync Status: {{status}}",
+    "tooltipLink": "Link to Sync Repo",
+    "popoverLabel": "Link to Repository",
+    "selectPlaceholder": "Select repository...",
+    "selectNone": "None",
+    "statusLabel": "Status: {{indicator}}",
+    "statusNotLinked": "Not Linked",
+    "syncNowButton": "Sync Now",
+    "statusLabelPart": "Status: "
+  },
+  "syncIndicatorHelper": {
+    "linked": "Linked to {{repoName}}",
+    "syncing": "Syncing with {{repoName}}...",
+    "error": "Sync error with {{repoName}}",
+    "needsSync": "Needs sync with {{repoName}}",
+    "synced": "Synced with {{repoName}}",
+    "unknownStatus": "Linked to {{repoName}} (Status: {{status}})"
+  }
+}
