--- a/src/locales/en/settings.json
+++ b/src/locales/en/settings.json
@@ -62,5 +62,107 @@
     },
     "yes": "Yes",
     "no": "No"
+  },
+  "generalSettings": {
+    "title": "General Settings",
+    "advancedSettings": "Advanced Settings",
+    "advancedVisible": "Advanced configuration options are visible. Toggle off to hide complex settings.",
+    "advancedHidden": "Basic mode - advanced configuration options are hidden. Toggle on to show all settings.",
+    "streamingDisplayTitle": "Streaming & Display",
+    "enableStreamingMarkdownLabel": "Parse Markdown While Streaming",
+    "enableStreamingMarkdownDescription": "Render Markdown formatting as the response arrives (may impact performance slightly).",
+    "enableStreamingCodeBlockParsingLabel": "Use Full Code Blocks While Streaming",
+    "enableStreamingCodeBlockParsingDescription": "Use the syntax-highlighting component for code blocks during streaming.",
+    "foldStreamingCodeBlocksLabel": "Fold Code Blocks by Default During Streaming",
+    "foldStreamingCodeBlocksDescription": "Automatically collapse code blocks as they stream in. Useful for long code outputs.",
+    "foldUserMessagesOnCompletionLabel": "Fold User Messages After Response",
+    "foldUserMessagesOnCompletionDescription": "Automatically collapse the user's prompt message once the assistant finishes responding.",
+    "enableAutoScrollOnStreamLabel": "Auto-Scroll While Streaming",
+    "enableAutoScrollOnStreamDescription": "Automatically scroll to the bottom as new content arrives.",
+    "streamingUpdateRateLabel": "Streaming Update Rate",
+    "streamingUpdateRateDescription": "Controls how frequently the UI updates during streaming (3-60 FPS).",
+    "fpsInputLabel": "FPS Input",
+    "autoScrollIntervalLabel": "Auto-Scroll Interval",
+    "autoScrollIntervalDescription": "The delay between auto-scroll checks during streaming (50-5000 ms).",
+    "msInputLabel": "ms Input",
+    "resetButton": "Reset Streaming & Display Settings",
+    "resetConfirmation": "Are you sure you want to reset Streaming & Display settings to their defaults?",
+    "validation": {
+      "minFps": "Min 3 FPS",
+      "maxFps": "Max 60 FPS",
+      "minMs": "Min 50ms",
+      "maxMs": "Max 5000ms"
+    },
+    "fpsSuffix": " FPS",
+    "msSuffix": " ms",
+    "streamingUpdateRateAriaLabel": "Streaming Render FPS Value",
+    "autoScrollIntervalAriaLabel": "Auto Scroll Interval Value",
+    "saving": "Saving...",
+    "validating": "Validating...",
+    "saveChanges": "Save Changes"
+  },
+  "modelSelector": {
+    "title": "Model Selection",
+    "globalModel": "Global Model",
+    "noModelSelected": "No model selected",
+    "selectModel": "Select a model"
+  },
+  "settingsModal": {
+    "title": "Settings",
+    "description": "Manage application settings, AI behavior, API keys, providers, and data.",
+    "noTabs": {
+      "message": "No settings tabs available or still loading. Check console for module registration errors.",
+      "toast": "Settings tab \"{{tabName}}\" not found. Opening default tab."
+    },
+    "closeButton": "Close"
+  },
+  "assistantTabs": {
+    "systemPrompt": "System Prompt",
+    "library": "Library",
+    "agents": "Agents",
+    "autoTitles": "Auto-Titles",
+    "tools": "Tools",
+    "mcp": "MCP",
+    "parameters": "Parameters",
+    "forkCompact": "Fork Compact"
+  },
+  "dataManagement": {
+    "title": "Data Management",
+    "description": "Import, export, or clear your application data. Use full import/export for backups or migrations.",
+    "importConversationsTitle": "Import Conversations (Legacy)",
+    "importConversationsDescription": "Import conversations from a previously exported JSON file. This only imports chat history.",
+    "importConversationsButton": "Import from File",
+    "exportConversationsTitle": "Export All Conversations (Legacy)",
+    "exportConversationsDescription": "Export all your conversations into a single JSON file. This only includes chat history.",
+    "exportConversationsButton": "Export All to JSON",
+    "fullExportTitle": "Full Export",
+    "fullExportDescription": "Select the data to include in your full backup file.",
+    "exportButton": "Export Full Backup",
+    "fullImportTitle": "Full Import",
+    "fullImportDescription": "Import a full backup file. This will overwrite existing data for selected categories.",
+    "importButton": "Import from Backup",
+    "dangerZoneTitle": "Danger Zone",
+    "dangerZoneDescription": "These actions are destructive and cannot be undone. Proceed with caution.",
+    "clearAllDataButton": "Clear All Local Data",
+    "importConfirmation": "Importing this file will OVERWRITE existing data for the selected categories. Are you sure you want to proceed?",
+    "clearDataConfirmationTitle": "🚨 ARE YOU ABSOLUTELY SURE? 🚨",
+    "clearDataConfirmationMessage": "This will permanently delete ALL conversations, messages, mods, settings, providers, and stored API keys from your browser. This action cannot be undone.",
+    "clearDataSecondConfirmation": "SECOND CONFIRMATION:\n\nReally delete everything? Consider exporting first.",
+    "dataClearedSuccess": "All local data cleared. Reloading the application...",
+    "dataClearedError": "Failed to clear all data",
+    "options": {
+      "settings": "Settings",
+      "apiKeys": "API Keys",
+      "providerConfigs": "Provider Configs",
+      "projects": "Projects",
+      "conversations": "Conversations",
+      "rulesAndTags": "Rules & Tags",
+      "mods": "Mods",
+      "syncRepos": "Git Sync Repos",
+      "mcpServers": "MCP Servers",
+      "promptTemplates": "Prompt Templates",
+      "agents": "Agents",
+      "workflows": "Workflows"
+    }
   }
 }
