--- a/src/locales/en/controls.json
+++ b/src/locales/en/controls.json
@@ -49,7 +49,10 @@
     "title": "LiteChat Menu",
     "close": "Close menu",
     "open": "Open menu",
-    "loading": "Loading menu..."
+    "loading": "Loading menu...",
+    "deleteConfirmation": "Are you sure you want to delete this conversation?",
+    "deleteProjectConfirmation": "Are you sure you want to delete this project and all conversations within it?",
+    "searchPlaceholder": "Search conversations..."
   },
   "autoTitle": {
     "disableForChat": "Disable Auto-Title for this Chat",
@@ -88,5 +91,81 @@
     "max": "Max",
     "perMillion": "($/1M)",
     "apply": "Apply"
+  },
+  "conversationList": {
+    "title": "LiteChat",
+    "newChat": "New Chat",
+    "newProject": "New Project",
+    "filterPlaceholder": "Filter...",
+    "workspaceEmpty": "Workspace is empty.",
+    "initializing": "Initializing list...",
+    "newChatError": "Failed to create new chat.",
+    "newProjectError": "Failed to create new project.",
+    "deleteConversationError": "Failed to delete conversation.",
+    "deleteProjectError": "Failed to delete project.",
+    "confirmDeleteConversation": "Delete this conversation? This cannot be undone.",
+    "githubRepo": "GitHub Repository",
+    "downloadLiteChat": "Download LiteChat",
+    "loading": "Loading...",
+    "noItemsMatchFilter": "No items match your filter.",
+    "noItemsYet": "No conversations or projects yet.",
+    "getStarted": "Create a new chat or project to get started.",
+    "openOnGitHub": "Open on GitHub",
+    "synced": "Synced",
+    "syncing": "Syncing...",
+    "syncError": "Sync error",
+    "notSynced": "Not synced",
+    "edit": "Edit",
+    "delete": "Delete",
+    "confirmDeletionTitle": "Confirm Deletion",
+    "confirmDeletionMessage": "Are you sure you want to delete '{{name}}'?",
+    "confirmDeletionWarning": "This will delete the item and all its contents. This action cannot be undone.",
+    "cancel": "Cancel",
+    "save": "Save",
+    "export": "Export",
+    "deleteProject": "Delete Project",
+    "deleteConversation": "Delete Conversation",
+    "untitled": "Untitled"
+  },
+  "modelSelector": {
+    "selectModel": "Select Model...",
+    "searchPlaceholder": "Search model...",
+    "sortTitle": "Sort models",
+    "sortAriaLabel": "Sort models",
+    "sortOptions": {
+      "nameAsc": "Name (A-Z)",
+      "nameDesc": "Name (Z-A)",
+      "inputPriceAsc": "Input Price (Low-High)",
+      "inputPriceDesc": "Input Price (High-Low)",
+      "outputPriceAsc": "Output Price (Low-High)",
+      "outputPriceDesc": "Output Price (High-Low)",
+      "contextLengthDesc": "Context Length (High-Low)",
+      "contextLengthAsc": "Context Length (Low-High)",
+      "releaseDateDesc": "Release Date (Newest)",
+      "releaseDateAsc": "Release Date (Oldest)"
+    },
+    "filterTitles": {
+      "reasoning": "Filter: Reasoning",
+      "webSearch": "Filter: Web Search",
+      "tools": "Filter: Tools",
+      "multimodal": "Filter: Multimodal",
+      "imageGeneration": "Filter: Image Generation"
+    },
+    "filterAriaLabels": {
+      "reasoning": "Filter by reasoning capability",
+      "webSearch": "Filter by web search capability",
+      "tools": "Filter by tool usage capability",
+      "multimodal": "Filter by multimodal capability",
+      "imageGeneration": "Filter by image generation capability"
+    },
+    "emptyState": {
+      "noMatch": "No models match all active filters.",
+      "noModels": "No models available.",
+      "notFound": "No model found."
+    }
+  },
+  "sidebarToggle": {
+    "expand": "Expand Sidebar",
+    "collapse": "Collapse Sidebar"
   }
 }
