--- a/src/locales/en/canvas.json
+++ b/src/locales/en/canvas.json
@@ -6,6 +6,15 @@
   "processing": "Processing...",
   "unknownModel": "Unknown Model",
   "generatingResponse": "Generating response...",
+  "loadingModel": "Loading Model...",
+  "assistantLoading": "Assistant (Loading...)",
+  "streamingStatus": "Streaming...",
+  "reasoning": "Reasoning",
+  "unfoldReasoning": "Unfold reasoning",
+  "foldReasoning": "Fold reasoning",
+  "unfoldResponse": "Unfold response",
+  "foldResponse": "Fold response",
+  "assistant": "Assistant",
   "reasoningPrefix": "[Reasoning] ",
   "toolCallsPrefix": "[ Tool Call(s)] ",
   "noTextResponse": "[No text response]",
@@ -100,5 +109,27 @@
     "downloadZip": "Download {{count}} code files as ZIP",
     "downloadZipAriaLabel": "Download code blocks as ZIP file",
     "zipDownloadFailed": "Failed to create ZIP file"
+  },
+  "emptyStateSetup": {
+    "welcomeTitle": "Welcome to LiteChat",
+    "setupProgress": "Setup Progress: {{progress}}%",
+    "stepsCompleted": "Steps completed: {{completed}} of {{total}}",
+    "configurationIssue": "Configuration issue detected. Please review provider settings.",
+    "openProviderSettings": "Open Provider Settings",
+    "addApiKey": "Add API Key",
+    "addApiKeyDescription": "To use providers like OpenAI, Google, Anthropic (Claude), or OpenRouter or any OpenAI API compatible provider, add an API key. Keys are stored securely in your browser.",
+    "localAiDescription": "If you want truly local AI, \"no internet required\", you can setup Ollama or, LMStudio (or any other local LLM solution with an OpenAI compatible API). These typically don't require API keys so see you in step 2.",
+    "addProvider": "Add AI Provider",
+    "addProviderDescription": "Connect to an AI provider you configured the key for...",
+    "providerRedundancyNote": "This might look redundant, but it allows you to have multiple keys for the same provider (personal, professional, etc.)",
+    "enableModels": "Enable Models",
+    "enableModelsDescription": "Enable models for the provider you just added ({{providerName}}).",
+    "enableModelsNote": "Enabling specific models improves the UI by reducing clutter and choice paralysis. You can enable more later in Settings.",
+    "enableModelsNote2": "And just like before, you can choose to activate a model for a certain combination of key/provider!",
+    "addProviderFirst": "Add a provider in Step {{stepNumber}} first.",
+    "startChatting": "Start Chatting",
+    "startChattingDescription": "You're all set! Click below to start your first chat.",
+    "launching": "Launching...",
+    "startFirstChat": "Start First Chat"
   }
 }
