--- a/src/locales/fr/settings.json
+++ b/src/locales/fr/settings.json
@@ -164,5 +164,11 @@
     "mcp": "MCP",
     "parameters": "Paramètres",
     "forkCompact": "Fork Compact"
+  },
+  "assistantPrompts": {
+    "templates": "Modèles",
+    "newTemplate": "Nouveau modèle",
+    "editTemplate": "Modifier : {{name}}",
+    "deleteConfirmation": "Êtes-vous sûr de vouloir supprimer ce modèle ?"
   }
 }
