--- a/src/locales/fr/vfs.json
+++ b/src/locales/fr/vfs.json
@@ -52,5 +52,20 @@
       "status": "Statut",
       "filePreview": "Aperçu du fichier"
     }
+  },
+  "modal": {
+    "title": "Système de Fichiers Virtuel",
+    "description": "Gérez les fichiers associés au contexte actuel. Sélectionnez des fichiers pour les joindre à votre prochain prompt.",
+    "noFilesSelected": "Aucun fichier sélectionné dans le VFS à joindre.",
+    "filesAttached": "{{count}} fichier(s) du VFS joint(s) au prochain prompt.",
+    "noValidFilesSelected": "Aucun fichier valide n'a été sélectionné pour être joint.",
+    "attachSelected": "Joindre la Sélection ({{count}})"
+  },
+  "triggerButton": {
+    "toggleVfs": "Basculer le système de fichiers virtuel",
+    "virtualFilesystem": "Système de fichiers virtuel",
+    "attachVfsFiles": "Attacher {{count}} fichier(s) VFS sélectionné(s)",
+    "attachButtonText": "Attacher ({{count}})",
+    "attachSelectedTooltip": "Attacher les fichiers VFS sélectionnés au prompt"
   }
 }
