[vibe] continuing with i18n gemini is a nightmare !

--- a/src/locales/en/renderers.json
+++ b/src/locales/en/renderers.json
@@ -1,1 +1,126 @@
-{}
+{
+  "beatBlock": {
+    "strudelReady": "Strudel environment ready!",
+    "strudelLoadFailed": "Failed to load Strudel environment"
+  },
+  "chartBlock": {
+    "parseError": "Failed to parse chart data",
+    "unknownParseError": "An unknown error occurred during parsing.",
+    "containerNotFound": "Chart container not found.",
+    "wrapperNotFound": "Chart wrapper not found.",
+    "downloadSuccess": "Chart downloaded successfully!",
+    "downloadFailed": "Failed to download chart.",
+    "header": "CHART",
+    "showChartTitle": "Show Chart",
+    "showCodeTitle": "Show Code",
+    "downloadChartTitle": "Download Chart",
+    "dataErrorTitle": "Chart Data Error",
+    "dataErrorDescription": "There was an error processing the chart data.",
+    "parsingData": "Parsing Chart Data...",
+    "noData": "No data available for chart.",
+    "unsupportedType": "Unsupported chart type: {{type}}",
+    "selectDataKeyPlaceholder": "Select Data Key"
+  },
+  "codeBlock": {
+    "defaultHeader": "CODE"
+  },
+  "flowBlock": {
+    "unknownStep": "Unknown Step",
+    "parseError": "Failed to parse flow data",
+    "unknownParseError": "An unknown error occurred during parsing.",
+    "layoutError": "Failed to compute flow layout.",
+    "containerNotFound": "Flow container not found.",
+    "flowStillLoading": "Flow is still loading, please wait.",
+    "flowViewportNotReady": "Flow viewport is not ready for download.",
+    "downloadSuccess": "Flow downloaded successfully as PNG!",
+    "downloadFailed": "Failed to download flow.",
+    "header": "FLOW",
+    "showFlowTitle": "Show Flow",
+    "showCodeTitle": "Show Code",
+    "downloadFlowTitle": "Download Flow as PNG",
+    "dataErrorTitle": "Flow Data Error",
+    "parsingData": "Parsing Flow Data...",
+    "noData": "No data available for flow.",
+    "calculatingLayout": "Calculating layout...",
+    "downloadingFlow": "Downloading flow..."
+  },
+  "formedibleBlock": {
+    "parseErrorTitle": "Form Definition Error",
+    "parsingForm": "Parsing form definition...",
+    "header": "FORM",
+    "showFormTitle": "Show Form",
+    "showCodeTitle": "Show Code",
+    "submit": "Submit",
+    "title": "Formedible Block",
+    "description": "📋 Interactive Form - Fill out and submit to add data to prompt input",
+    "submitting": "Submitting form...",
+    "submitSuccess": "Form submitted successfully!",
+    "submitError": "Error submitting form",
+    "submittedMessage": "Form data has been added to the input.",
+    "submitButton": "Submit Form"
+  },
+  "jsRunnableBlock": {
+    "header": "RUN JS",
+    "running": "Running...",
+    "loading": "Loading...",
+    "run": "Run",
+    "clickMore": "Click {{count}} more",
+    "securityCheckFailed": "Security check failed. Please try again.",
+    "executionFailed": "Code execution failed - check output for details",
+    "executionSuccess": "Code executed successfully {{mode}}",
+    "safeMode": "(safe mode)",
+    "unsafeMode": "(unsafe mode)",
+    "previewCleared": "Preview cleared and modules unloaded",
+    "noCodeToDownload": "No code to download",
+    "quickjsReady": "QuickJS Ready",
+    "quickjsLoading": "QuickJS Loading",
+    "quickjsError": "QuickJS Error",
+    "safe": "SAFE",
+    "unsafe": "UNSAFE",
+    "recheckSecurity": "Recheck Security",
+    "checkSecurity": "Check Security",
+    "downloadExecutable": "Download executable",
+    "showCode": "Show Code",
+    "showConsole": "Show Console",
+    "showPreview": "Show Preview",
+    "stopAndClear": "Stop & Clear",
+    "consoleOutput": "CONSOLE OUTPUT:",
+    "noOutput": "No output",
+    "preview": "PREVIEW:",
+    "noPreviewContent": "No preview content. Use DOM manipulation or litechat.target to add elements here."
+  },
+  "mermaidBlock": {
+    "header": "MERMAID",
+    "renderError": "Failed to render Mermaid diagram",
+    "noResults": "No results returned from Mermaid renderer",
+    "noSvgContent": "No SVG content to download",
+    "downloadSuccess": "SVG downloaded successfully!",
+    "downloadFailed": "Failed to download SVG",
+    "showDiagram": "Show diagram",
+    "showCode": "Show code",
+    "downloadSvg": "Download SVG",
+    "renderingDiagram": "Rendering diagram...",
+    "renderErrorTitle": "Failed to render Mermaid diagram"
+  },
+  "pythonRunnableBlock": {
+    "header": "RUNNABLE PYTHON",
+    "running": "Running...",
+    "loadingPython": "Loading Python...",
+    "loadPython": "Load Python",
+    "run": "Run",
+    "clickMore": "Click {{count}} more",
+    "securityCheckFailed": "Security check failed. Please try again.",
+    "blocksDisabled": "Runnable blocks are disabled in settings.",
+    "loadFailed": "Failed to load Python environment",
+    "ready": "Ready ({{count}} packages)",
+    "recheckSecurity": "Recheck Security",
+    "checkSecurity": "Check Security",
+    "showCode": "Show Code",
+    "showConsole": "Show Console",
+    "showPreview": "Show Preview",
+    "output": "PYTHON OUTPUT:",
+    "noOutput": "No output",
+    "preview": "PREVIEW:",
+    "noPreviewContent": "No preview content. Use plt.show() or litechat.target.appendChild(element) to add content here."
+  }
+}
